# rustBeacon

./: pubkey.txt  setup.sh  sign.txt
rusting/: Cargo.toml  Structuring.ipynb  local_setup.sh  node1_sk.txt  node2_sk.txt  node3_sk.txt  node4_sk.txt  nodes_information.txt  tempnodeinfo.txt  updated_nodes_information.txt  updatednodeinfo.txt
rusting/.ipynb_checkpoints/: Structuring-checkpoint.ipynb
rusting/crypto/: schnorrkel.rs
rusting/src/: client.rs  main.rs  newclient.rs  newserver.rs  node1.rs  node2.rs  node3.rs  node4.rs  nodes.rs  nodes_test.rs  server.rs
